# housaku

./: .gitignore  Makefile  README.md  pyproject.toml  requirements.txt
.github/workflows/: release.yaml  release.yml
src/housaku/: app.py  cli.py  config_template.toml  db.py  feeds.py  files.py  models.py  repositories.py  search.py  settings.py  stop_words.py  utils.py  web_app.py
src/housaku/commands/: __init__.py  config.py  index.py  purge.py  search.py  tui.py  vacuum.py  web.py
src/housaku/static/js/: main.js
src/housaku/tui/: __init__.py  app.py  global.tcss
src/housaku/web/: app.py  index.html
src/housaku/web/templates/: base.html  index.html  results.html
src/sagasu/: cli.py  db.py  feeds.py  files.py  models.py  repositories.py  requirements.txt  search.py  services.py  settings.py  stop_words.py  utils.py
static/css/: styles.css
templates/: index.html  results.html
tests/: test_files.py  test_repositories.py  test_search.py  test_utils.py
tests/examples/: daring_fireball_markdown_basics.md  daring_fireball_markdown_syntax.md  fundamental_accessibility.epub  gutenberg_moby_dick.txt  gutenberg_romeo_and_juliet.txt
tests/samples/: short.md  short.txt
