[project]
name = "housaku"
version = "v0.7.12"
description = "A personal search engine built on top of SQLite's FTS5."
authors = [{ name = "dnlzrgz", email = "contact@dnlzrgz.com" }]
readme = "README.md"
license = "MIT"
requires-python = ">=3.13"
keywords = [
  "bm25",
  "cli",
  "fts",
  "rss parsing",
  "rss",
  "search engine",
  "search",
  "sqlite",
  "tui",
  "web crawling",
  "web",
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Environment :: Console",
  "Environment :: Web Environment",
  "Intended Audience :: Developers",
  "Intended Audience :: End Users/Desktop",
  "Intended Audience :: Information Technology",
  "License :: OSI Approved :: MIT License",
  "Natural Language :: English",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.13",
  "Topic :: Internet :: WWW/HTTP",
  "Topic :: Internet :: WWW/HTTP :: Indexing/Search",
  "Topic :: Internet :: WWW/HTTP :: WSGI :: Application",
  "Topic :: Utilities",
  "Topic :: Database",
  "Topic :: Text Processing",
  "Typing :: Typed",
]
dependencies = [
  "rich>=13.8.0",
  "pydantic-settings>=2.4.0",
  "click>=8.1.7",
  "feedparser>=6.0.11",
  "selectolax>=0.3.21",
  "rich-click>=1.8.3",
  "pymupdf>=1.24.10",
  "python-multipart>=0.0.12",
  "textual>=0.82.0",
  "aiohttp[speedups]>=3.11.7",
  "uvicorn>=0.32.1",
  "starlette>=0.41.3",
  "aiofiles>=24.1.0",
]

[project.urls]
homepage = "https://dnlzrgz.com/projects/housaku/"
source = "https://github.com/dnlzrgz/housaku"
issues = "https://github.com/dnlzrgz/housaku/issues"
releases = "https://github.com/dnlzrgz/housaku/releases"

[project.scripts]
housaku = "housaku:cli.cli"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
dev-dependencies = [
  "ruff>=0.6.3",
  "commitizen>=3.29.0",
  "pytest>=8.3.2",
  "pytest-benchmark>=4.0.0",
  "textual-dev>=1.6.1",
]
